change to textarea again

--- a/salam-online.html
+++ b/salam-online.html
@@ -128,11 +128,7 @@
 	</header>
 
 	<!-- Output -->
-	<div contenteditable="" class="code">
-		<span style="background-color: yellow;">function</span> myFunc() {
-		<span style="background-color: yellow;">return</span> 42;
-		}
-	</div>
+	<textarea class="code"></textarea>
 	<iframe class="iframe"></iframe>
 	<pre class="output"></pre>
 	<pre class="error"></pre>
