--- a/salam-online.html
+++ b/salam-online.html
@@ -98,7 +98,7 @@
 				</svg>
 			</button>
 		</div>
-		<a href="https://auth.salamlang.ir/auth" class="login">
+		<a href="https://auth.salamlang.ir/auth" class="login" style="display: none">
 			<span class="title">ورود</span>
 			<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -112,7 +112,8 @@
 				</g>
 			</svg>
 		</a>
-		<button class="logout"><span class="title">خروج</span>
+		<button class="logout" style="display: none">
+			<span class="title">خروج</span>
 			<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
 				<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
