--- a/salam-online.html
+++ b/salam-online.html
@@ -98,7 +98,8 @@
 				</svg>
 			</button>
 		</div>
-		<a href="https://auth.salamlang.ir/auth" class="login" style="display: none">
+		<!--
+		<a href="https://auth.salamlang.ir/auth" class="login">
 			<span class="title">ورود</span>
 			<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -126,6 +127,7 @@
 				</g>
 			</svg>
 		</button>
+		-->
 	</header>
 
 	<!-- Output -->
