--- a/editor-work.html
+++ b/editor-work.html
@@ -13,11 +13,8 @@
             left: 0;
             right: 0;
         }
-        .ace_line {
-            /* direction: ltr; */
-            /* unicode-bidi: bidi-override; */
-        }
-        </style>    
+        </style>
+        <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div id="editor"></div>
@@ -30,24 +27,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.36.2/ext-rtl.min.js" integrity="sha512-Y1PT0DPmdyo8jNcZ7Hlocor6wqXMpfGVp0rU65vQEjd2DipLQoRSgJ5V+3u6Y7Q3a6PcfsANYJ1NnjQvrReCqg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script>
         const elm_editor = document.getElementById("editor");
-        elm_editor.textContent = `<!DOCTYPE html>
-<html>
-    <head>
-
-    <style type="text/css">
-        .text-layer {
-            font-family: Monaco, "Courier New", monospace;
-            font-size: 12px;
-            cursor: text;
-        }
-    </style>
-
-    </head>
-    <body>
-        <h2>dfgdfgdfg</h2>
-        <h1 style="color:red">Juhu Kinners</h1>
-    </body>
-</html>`;
+        elm_editor.textContent = ``;
         
         const editor = ace.edit(elm_editor, {
             mode: "ace/mode/html",
@@ -68,10 +48,9 @@
             highlightActiveLine: true,
             rtl: true,
             rtlText: true,
-            enableBasicAutocompletion: false,
-            enableSnippets: false,
-            enableLiveAutocompletion: false,
+            enableSnippets: true,
             fontSize: "20px",
+            fontFamily: "Vazirmatn",
             showPrintMargin: false,
             showGutter: false,
             // spellcheck: false,
