--- a/editor-rtl.html
+++ b/editor-rtl.html
@@ -21,19 +21,21 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.13.4/mode/htmlmixed/htmlmixed.js"></script>
 
 		<script>
-  function myCompletions(context) {
-    let word = context.matchBefore(/\w*/);
-    if (word.from == word.to && !context.explicit)
-      return null
-    return {
-      from: word.from,
-      options: [
-        {label: "match", type: "keyword"},
-        {label: "hello", type: "variable", info: "(World)"},
-        {label: "magic", type: "text", apply: "⠁⭒*.✩.*⭒⠁", detail: "macro"}
-      ]
-    }
-  }
+		function myCompletions(context) {
+			const word = context.matchBefore(/\w*/);
+
+			if (word.from == word.to && !context.explicit) return null;
+
+			return {
+				from: word.from,
+				options: [
+					{label: "match", type: "keyword"},
+					{label: "hello", type: "variable", info: "(World)"},
+					{label: "magic", type: "text", apply: "⠁⭒*.✩.*⭒⠁", detail: "macro"},
+				],
+			};
+		}
+
 		const elm_editor = document.querySelector("#editor");
 		const editor_options = {
 			styleActiveLine: true,
@@ -44,7 +46,7 @@
 			mode: "htmlmixed",
 			extensions: [
 				// basicSetup,
-				autocompletion({override: [myCompletions]}),
+				// autocompletion({override: [myCompletions]}),
 			],
 		};
 		const editor = CodeMirror.fromTextArea(elm_editor, editor_options);
